# quantum-safe-privacy-portal

./: DEVIN_SESSION_FINAL_SUMMARY_20250704.md  DEVIN_SESSION_SUMMARY_20250703.md  DEVIN_SESSION_SUMMARY_20250704.md  DEVIN_SESSION_SUMMARY_20250704_FINAL.md  LICENSE  README.md  SECURITY_CHECKLIST.md  SECURITY_PATCH.md  TESTING.md  babel.config.js.disabled  debug_yaml.py  devin_final_main_test_output_20250704.txt  ffi_trace.md  handover.md  jest-global-setup.ts  jest-global-teardown.ts  jest.config.js  jest.minimal.config.js  package-lock.json  package.json  test_sync.md  test_wbs_3_2.sh  tsconfig.json  validate_yaml.py
.github/: ci.yml  dependabot.yml
.github/workflows/: README.md  WBS-1.1-database-migration-v1.yml  WBS-1.2-containerization-v1.yml  WBS-1.2.5-validation-v1.yml  WBS-1.3-api-gateway-v1.yml  WBS-2.1-validation-v1.yml  WBS-2.1.1-validation-v1.yml  WBS-2.1.2-validation-v1.yml  WBS-2.1.3-validation-v1.yml  WBS-2.1.4-validation-v1.yml  WBS-2.1.5-validation-v1.yml  WBS-2.2-validation-v1.yml  WBS-2.2.3-4-validation-v1.yml  backend.yml  ci-cd-validation-adjusted-v2.yml  ci-cd-validation-adjusted-v2.yml.disabled  ci-cd-validation-adjusted-v3.yml  ci-cd-validation.yml  ci.yml  database-migration-phase1-v1.yml  foundation.yml  frontend.yml  (+9 more)
.zap/: rules.tsv
docs/: AI_FIRST_DEVELOPMENT_ROADMAP.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_UPDATE_WBS_1.13.md  AUTHENTICATION_FLOW_DOCUMENTATION.md  AUTOMATED_ROLLBACK_FRAMEWORK.md  BUSINESS_MODEL_CANVAS_B2B_SAAS.md  CICD.md  CI_PIPELINE_TEMPLATES.md  CI_TESTING_STRATEGY.md  COMPETITIVE_LANDSCAPE_ANALYSIS.md  COMPLIANCE_REPORT.md  COMPREHENSIVE_BUSINESS_MODELS_ANALYSIS.md  CONTRIBUTOR_MAGNETISM_FRAMEWORK.md  CRITICAL_FILE_LOCATIONS_GUIDE.md  DEBUGGING.md  DEPLOYMENT.md  DEVELOPER_TESTING.md  DEVICE_TRUST.md  DEVIN_STRATEGIC_RECOMMENDATION.md  DEV_BOOT_UP.md  DISRUPTIVE_PRIVACY_FIRST_PLATFORM.md  E2E_TESTING_BEST_PRACTICES.md  END_TO_END_FLOW_ANALYSIS.md  GREEN_STATUS_GUARANTEE.md  HANDOVER_SUMMARY.md  INNOVATIVE_PRIVACY_MONETIZATION_PLATFORM.md  INTEGRATIONS.md  INVESTMENT_READY_FINANCIAL_ANALYSIS.md  JEST_CONFIGURATION.md  LOCAL_POSTGRESQL_SETUP.md  MFA.md  MIGRATING.md  NEW_ENGINEER_ONBOARDING_MESSAGE.md  NEXT_SESSION_HANDOFF_POSTGRESQL_MIGRATION.md  NEXT_SESSION_HANDOFF_RECOMMENDATIONS.md  OBSERVABILITY.md  ONBOARDING.md  PQC_IMPLEMENTATION_INSIGHTS_AND_LESSONS_LEARNED.md  PQC_INTEGRATION_STATUS_TRACKING.md  (+57 more)
src/: README.md
src/portal/mock-qynauth/src/rust_lib/: .trivyignore  Cargo.toml  build.rs  deny.toml
src/portal/mock-qynauth/src/rust_lib/.cargo/: config.toml
src/portal/mock-qynauth/src/rust_lib/benches/: pqc_benchmarks.rs  pqc_performance.rs
src/portal/mock-qynauth/src/rust_lib/scripts/: build-all-variants.sh  dependency-health-check.sh  dev-build.sh  monitoring-dashboard.sh  pqc-performance-monitor.sh  production-build.sh  security-scan.sh
src/portal/mock-qynauth/src/rust_lib/src/: dilithium.rs  errors.rs  key_management.rs  kyber.rs  lib.rs  optimizations.rs
src/portal/mock-qynauth/src/rust_lib/src/ffi/: dilithium_ffi.rs  kyber_ffi.rs  memory.rs  mldsa_ffi.rs  mlkem_ffi.rs  mod.rs  monitoring.rs
src/portal/mock-qynauth/src/rust_lib/src/key_management/: tests.rs
src/portal/mock-qynauth/src/rust_lib/src/security/: cache_protection.rs  mod.rs  power_analysis.rs  side_channel.rs
src/portal/mock-qynauth/src/rust_lib/tests/: crypto_security.rs  ffi_tests.rs  ffi_tests.rs.disabled  monitoring_performance.rs  performance.rs  pqc_test.rs  security_tests.rs
src/portal/mock-qynauth/src/rust_lib/tests/performance/: mod.rs  regression_testing.rs
(+494 files in other folders)
