[package]
name = "qynauth_pqc"
version = "0.1.0"
edition = "2021"

[lib]
name = "qynauth_pqc"
crate-type = ["cdylib", "rlib"]

[dependencies]
# NIST PQC Algorithms
pqcrypto-kyber = "0.8.1"
pqcrypto-dilithium = "0.5.0"
pqcrypto-traits = "0.3.4"

# FFI and Memory Management
libc = "0.2"
once_cell = "1.19"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Security and Memory Management
zeroize = "1.7"
subtle = "2.5"
secrecy = "0.8"

# Error Handling and Logging
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"

# Cryptographic Utilities
rand = "0.8"
getrandom = "0.2"

# Encoding
base64 = "0.21"

[features]
default = []
    