[package]
name = "qynauth_pqc"
version = "0.1.0"
edition = "2021"

[lib]
name = "qynauth_pqc"
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
# NIST PQC Algorithms (Updated to maintained versions)
pqcrypto-mlkem = "0.1.0"
pqcrypto-mldsa = "0.1.0"
pqcrypto-traits = "0.3.5"

# FFI and Memory Management
libc = "0.2"
once_cell = "1.19"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Security and Memory Management
zeroize = "1.7"
subtle = "2.5"
secrecy = "0.10"

# Error Handling and Logging
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"

# Cryptographic Utilities
rand = "0.8"
getrandom = "0.2"

# Encoding
base64 = "0.21"

[features]
default = ["kyber768", "dilithium3", "avx2"]
kyber768 = []
dilithium3 = []
avx2 = ["pqcrypto-mlkem/avx2", "pqcrypto-mldsa/avx2"]
neon = ["pqcrypto-mlkem/neon", "pqcrypto-mldsa/neon"]
serialization = ["pqcrypto-mlkem/serialization", "pqcrypto-mldsa/serialization"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
debug = true
    